--- a/members/templates/registration/create_user_profile_page.html
+++ b/members/templates/registration/create_user_profile_page.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
 {% block title%}
 CREATE A NEW PROFILE 
+{% endblock%}
 {% block content%}
 
 {%  if user.is_authenticated %}
