--- a/theblog/templates/BASE.HTML
+++ b/theblog/templates/BASE.HTML
@@ -40,35 +40,43 @@
               <a class="nav-link" href="{% url 'add_category' %}">ADD CATEGORY</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                 {% if user.profile.id %}
-            <!--         <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a>-->
                   <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Show Profile Page</a>
                 {% else %}
                   <a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile Page</a>
                 {% endif %}
-           
               </div>
             </li>
             <li class="nav-item">
-				<a class="nav-link" href="{%url 'login'%}">LOGIN</a>		{%else%}		<a class="nav-link" href="{% url 'logout'%}">LOGOUT</a>
-
-				<li class="nav-item"></li>
-        <a class="nav-link" href="{% url 'register'%}" >REGISTERED</a>
-          
-           
+              <a class="nav-link" href="{% url 'logout' %}">LOGOUT</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">LOGIN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">REGISTER</a>
+            </li>
           {% endif %}
+					<li class="nav-item">
+					<a class="nav-link"  href="http://www.bradshawwebsites.ie">Bradshaw Websites</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link"  href="http://www.bradshawwebsites.ie" target="_blank">Bradshaw Websites</a>
+
+
+						</li>
+
         </ul>
         {% if user.is_authenticated %}
           <ul class="navbar-nav ml-auto">
-            <li class="navbar-item">
-              <a class="nav-item" href="	<li class="nav-item"></li>
-				
-								
-                {{ user.first_name }}&nbsp; {{ user.last_name }}
+            <li class="nav-item">
+              <a class="nav-link">
+                {{ user.first_name }} {{ user.last_name }}
               </a>
             </li>
           </ul>
