--- a/theblog/templates/update_post.html
+++ b/theblog/templates/update_post.html
@@ -2,7 +2,7 @@
 		{% block title %}
 	 EDIT BLOG POST
 		{% endblock %}
-
+{%block content%}
 		{% if user.is_authenticated %}
 		<h1>UPDATE A PREVIOUS POST MADE</h1>
 
@@ -18,7 +18,4 @@
 		{% else %}
 		YOU NEED TO IN TO AMEND YOUR POST
 		{% endif %}
-
-{% else %}
-		PLEASE LOG IN
-{% endif %}
+{% endblock%}
